// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[RequestView] should match body snapshot 1`] = `
<div>
  <div
    class="max-w-5xl mx-24 my-8 px-8 pt-2"
  >
    <div
      class="flex space-x-4 mb-4"
    >
      <button
        class="text-base rounded py-2 px-4 font-medium border hover:bg-gray-300 active:bg-gray-400"
      >
        Headers
      </button>
      <button
        class="text-base rounded py-2 px-4 font-medium border bg-blue-50"
        disabled=""
      >
        Body
      </button>
    </div>
    <div
      class="hidden"
    >
      <span
        class="text-3xl font-bold"
      >
        www.example.com
      </span>
      <div
        class="my-8 grid grid-cols-[10rem_1fr] gap-x-4 gap-y-1"
      >
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          URL
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            https://www.example.com/complete/search
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          Method
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            POST
          </span>
        </div>
        <span
          class="text-lg font-semibold col-span-2 mt-4 select-none"
        >
          Query
        </span>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          q
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            toto
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          client
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            gws-wiz
          </span>
        </div>
        <span
          class="text-lg font-semibold col-span-2 mt-4 select-none"
        >
          Headers
        </span>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          Accept
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            */*
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          Referer
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            https://www.google.com/
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          User-Agent
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/98.0.4758.102 Safari/537.36
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          Content-Type
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            application/json
          </span>
        </div>
        <span
          class="text-lg font-semibold col-span-2 mt-4 select-none"
        >
          Cookies
        </span>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          CONSENT
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            YES+srp.gws-20220217-0-RC1.en+FX+923
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          1P_JAR
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            2022-02-20-16
          </span>
        </div>
      </div>
    </div>
    <div
      class="mt-8 flex flex-col justify-items-stretch "
    >
      <div
        class="space-y-1 -ml-4"
      >
        <div
          class="flex items-center space-x-1"
          style="margin-left: 0rem;"
        >
          <button
            class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
          >
            <svg
              class="fill-white"
            />
          </button>
          <pre
            class="text-amber-700"
          >
            hello
            :
          </pre>
           
          <div
            class="flex-auto"
          >
            <pre
              class="whitespace-pre-wrap break-all text-sky-400"
            >
              "world"
            </pre>
          </div>
        </div>
        <div
          class="flex items-center space-x-1"
          style="margin-left: 0rem;"
        >
          <button
            class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700 invisible"
          >
            <svg
              class="fill-white"
            />
          </button>
          <pre
            class="text-amber-700"
          >
            obj
            :
          </pre>
           
          <pre
            class="flex items-center space-x-0.5"
          >
            {
            <button
              class="mx-0.5 rounded-sm bg-slate-400 hover:bg-slate-500 active:bg-slate-600"
            >
              <svg />
            </button>
            }
          </pre>
        </div>
        <div
          class="space-y-1 "
        >
          <div
            class="flex items-center space-x-1"
            style="margin-left: 1rem;"
          >
            <button
              class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
            >
              <svg
                class="fill-white"
              />
            </button>
            <pre
              class="text-amber-700"
            >
              barbes
              :
            </pre>
             
            <div
              class="flex-auto"
            >
              <pre
                class="whitespace-pre-wrap break-all text-sky-400"
              >
                "rochechouart"
              </pre>
            </div>
          </div>
          <div
            class="flex items-center space-x-1"
            style="margin-left: 1rem;"
          >
            <button
              class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
            >
              <svg
                class="fill-white"
              />
            </button>
            <pre
              class="text-amber-700"
            >
              version
              :
            </pre>
             
            <div
              class="flex-auto"
            >
              <pre
                class="whitespace-pre-wrap break-all text-rose-500"
              >
                1
              </pre>
            </div>
          </div>
          <div
            class="flex items-center space-x-1"
            style="margin-left: 1rem;"
          >
            <button
              class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
            >
              <svg
                class="fill-white"
              />
            </button>
            <pre
              class="text-amber-700"
            >
              toto
              :
            </pre>
             
            <div
              class="flex-auto"
            >
              <pre
                class="whitespace-pre-wrap break-all text-purple-500"
              >
                null
              </pre>
            </div>
          </div>
          <div
            class="flex items-center space-x-1"
            style="margin-left: 1rem;"
          >
            <button
              class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700 invisible"
            >
              <svg
                class="fill-white"
              />
            </button>
            <pre
              class="text-amber-700"
            >
              arr
              :
            </pre>
             
            <pre
              class="flex items-center space-x-0.5"
            >
              [
              <button
                class="mx-0.5 rounded-sm bg-slate-400 hover:bg-slate-500 active:bg-slate-600"
              >
                <svg />
              </button>
              ]
            </pre>
          </div>
          <div
            class="space-y-1 hidden"
          >
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                0
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  0.7309955249202127
                </pre>
              </div>
            </div>
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                1
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  0.45152102178420384
                </pre>
              </div>
            </div>
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                2
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  0.3101491368469109
                </pre>
              </div>
            </div>
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                3
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  0.33964078594296154
                </pre>
              </div>
            </div>
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                4
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  0.579201406715314
                </pre>
              </div>
            </div>
          </div>
          <div
            class="flex items-center space-x-1"
            style="margin-left: 1rem;"
          >
            <button
              class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700 invisible"
            >
              <svg
                class="fill-white"
              />
            </button>
            <pre
              class="text-amber-700"
            >
              nested
              :
            </pre>
             
            <pre
              class="flex items-center space-x-0.5"
            >
              {
              <button
                class="mx-0.5 rounded-sm bg-slate-400 hover:bg-slate-500 active:bg-slate-600"
              >
                <svg />
              </button>
              }
            </pre>
          </div>
          <div
            class="space-y-1 hidden"
          >
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                thx
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  1138
                </pre>
              </div>
            </div>
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                star
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-sky-400"
                >
                  "wars"
                </pre>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center space-x-1"
          style="margin-left: 0rem;"
        >
          <button
            class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
          >
            <svg
              class="fill-white"
            />
          </button>
          <pre
            class="text-amber-700"
          >
            done
            :
          </pre>
           
          <div
            class="flex-auto"
          >
            <pre
              class="whitespace-pre-wrap break-all text-green-500"
            >
              true
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`[RequestView] should match headers snapshot 1`] = `
<div>
  <div
    class="max-w-5xl mx-24 my-8 px-8 pt-2"
  >
    <div
      class="flex space-x-4 mb-4"
    >
      <button
        class="text-base rounded py-2 px-4 font-medium border bg-blue-50"
        disabled=""
      >
        Headers
      </button>
      <button
        class="text-base rounded py-2 px-4 font-medium border hover:bg-gray-300 active:bg-gray-400"
      >
        Body
      </button>
    </div>
    <div
      class=""
    >
      <span
        class="text-3xl font-bold"
      >
        www.example.com
      </span>
      <div
        class="my-8 grid grid-cols-[10rem_1fr] gap-x-4 gap-y-1"
      >
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          URL
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            https://www.example.com/complete/search
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          Method
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            POST
          </span>
        </div>
        <span
          class="text-lg font-semibold col-span-2 mt-4 select-none"
        >
          Query
        </span>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          q
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            toto
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          client
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            gws-wiz
          </span>
        </div>
        <span
          class="text-lg font-semibold col-span-2 mt-4 select-none"
        >
          Headers
        </span>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          Accept
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            */*
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          Referer
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            https://www.google.com/
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          User-Agent
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/98.0.4758.102 Safari/537.36
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          Content-Type
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            application/json
          </span>
        </div>
        <span
          class="text-lg font-semibold col-span-2 mt-4 select-none"
        >
          Cookies
        </span>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          CONSENT
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            YES+srp.gws-20220217-0-RC1.en+FX+923
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          1P_JAR
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            2022-02-20-16
          </span>
        </div>
      </div>
    </div>
    <div
      class="mt-8 flex flex-col justify-items-stretch hidden"
    >
      <div
        class="space-y-1 -ml-4"
      >
        <div
          class="flex items-center space-x-1"
          style="margin-left: 0rem;"
        >
          <button
            class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
          >
            <svg
              class="fill-white"
            />
          </button>
          <pre
            class="text-amber-700"
          >
            hello
            :
          </pre>
           
          <div
            class="flex-auto"
          >
            <pre
              class="whitespace-pre-wrap break-all text-sky-400"
            >
              "world"
            </pre>
          </div>
        </div>
        <div
          class="flex items-center space-x-1"
          style="margin-left: 0rem;"
        >
          <button
            class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700 invisible"
          >
            <svg
              class="fill-white"
            />
          </button>
          <pre
            class="text-amber-700"
          >
            obj
            :
          </pre>
           
          <pre
            class="flex items-center space-x-0.5"
          >
            {
            <button
              class="mx-0.5 rounded-sm bg-slate-400 hover:bg-slate-500 active:bg-slate-600"
            >
              <svg />
            </button>
            }
          </pre>
        </div>
        <div
          class="space-y-1 "
        >
          <div
            class="flex items-center space-x-1"
            style="margin-left: 1rem;"
          >
            <button
              class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
            >
              <svg
                class="fill-white"
              />
            </button>
            <pre
              class="text-amber-700"
            >
              barbes
              :
            </pre>
             
            <div
              class="flex-auto"
            >
              <pre
                class="whitespace-pre-wrap break-all text-sky-400"
              >
                "rochechouart"
              </pre>
            </div>
          </div>
          <div
            class="flex items-center space-x-1"
            style="margin-left: 1rem;"
          >
            <button
              class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
            >
              <svg
                class="fill-white"
              />
            </button>
            <pre
              class="text-amber-700"
            >
              version
              :
            </pre>
             
            <div
              class="flex-auto"
            >
              <pre
                class="whitespace-pre-wrap break-all text-rose-500"
              >
                1
              </pre>
            </div>
          </div>
          <div
            class="flex items-center space-x-1"
            style="margin-left: 1rem;"
          >
            <button
              class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
            >
              <svg
                class="fill-white"
              />
            </button>
            <pre
              class="text-amber-700"
            >
              toto
              :
            </pre>
             
            <div
              class="flex-auto"
            >
              <pre
                class="whitespace-pre-wrap break-all text-purple-500"
              >
                null
              </pre>
            </div>
          </div>
          <div
            class="flex items-center space-x-1"
            style="margin-left: 1rem;"
          >
            <button
              class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700 invisible"
            >
              <svg
                class="fill-white"
              />
            </button>
            <pre
              class="text-amber-700"
            >
              arr
              :
            </pre>
             
            <pre
              class="flex items-center space-x-0.5"
            >
              [
              <button
                class="mx-0.5 rounded-sm bg-slate-400 hover:bg-slate-500 active:bg-slate-600"
              >
                <svg />
              </button>
              ]
            </pre>
          </div>
          <div
            class="space-y-1 hidden"
          >
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                0
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  0.7309955249202127
                </pre>
              </div>
            </div>
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                1
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  0.45152102178420384
                </pre>
              </div>
            </div>
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                2
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  0.3101491368469109
                </pre>
              </div>
            </div>
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                3
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  0.33964078594296154
                </pre>
              </div>
            </div>
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                4
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  0.579201406715314
                </pre>
              </div>
            </div>
          </div>
          <div
            class="flex items-center space-x-1"
            style="margin-left: 1rem;"
          >
            <button
              class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700 invisible"
            >
              <svg
                class="fill-white"
              />
            </button>
            <pre
              class="text-amber-700"
            >
              nested
              :
            </pre>
             
            <pre
              class="flex items-center space-x-0.5"
            >
              {
              <button
                class="mx-0.5 rounded-sm bg-slate-400 hover:bg-slate-500 active:bg-slate-600"
              >
                <svg />
              </button>
              }
            </pre>
          </div>
          <div
            class="space-y-1 hidden"
          >
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                thx
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  1138
                </pre>
              </div>
            </div>
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                star
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-sky-400"
                >
                  "wars"
                </pre>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center space-x-1"
          style="margin-left: 0rem;"
        >
          <button
            class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
          >
            <svg
              class="fill-white"
            />
          </button>
          <pre
            class="text-amber-700"
          >
            done
            :
          </pre>
           
          <div
            class="flex-auto"
          >
            <pre
              class="whitespace-pre-wrap break-all text-green-500"
            >
              true
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`[RequestView] should match initial snapshot 1`] = `
<div>
  <div
    class="max-w-5xl mx-24 my-8 px-8 pt-2"
  >
    <div
      class="flex space-x-4 mb-4"
    >
      <button
        class="text-base rounded py-2 px-4 font-medium border bg-blue-50"
        disabled=""
      >
        Headers
      </button>
      <button
        class="text-base rounded py-2 px-4 font-medium border hover:bg-gray-300 active:bg-gray-400"
      >
        Body
      </button>
    </div>
    <div
      class=""
    >
      <span
        class="text-3xl font-bold"
      >
        www.example.com
      </span>
      <div
        class="my-8 grid grid-cols-[10rem_1fr] gap-x-4 gap-y-1"
      >
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          URL
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            https://www.example.com/complete/search
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          Method
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            POST
          </span>
        </div>
        <span
          class="text-lg font-semibold col-span-2 mt-4 select-none"
        >
          Query
        </span>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          q
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            toto
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          client
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            gws-wiz
          </span>
        </div>
        <span
          class="text-lg font-semibold col-span-2 mt-4 select-none"
        >
          Headers
        </span>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          Accept
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            */*
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          Referer
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            https://www.google.com/
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          User-Agent
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/98.0.4758.102 Safari/537.36
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          Content-Type
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            application/json
          </span>
        </div>
        <span
          class="text-lg font-semibold col-span-2 mt-4 select-none"
        >
          Cookies
        </span>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          CONSENT
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            YES+srp.gws-20220217-0-RC1.en+FX+923
          </span>
        </div>
        <span
          class="text-right font-medium text-gray-500 select-none"
        >
          1P_JAR
        </span>
        <div
          class="flex overflow-x-hidden space-x-1"
        >
          <span
            class="text-ellipsis overflow-x-hidden whitespace-nowrap"
          >
            2022-02-20-16
          </span>
        </div>
      </div>
    </div>
    <div
      class="mt-8 flex flex-col justify-items-stretch hidden"
    >
      <div
        class="space-y-1 -ml-4"
      >
        <div
          class="flex items-center space-x-1"
          style="margin-left: 0rem;"
        >
          <button
            class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
          >
            <svg
              class="fill-white"
            />
          </button>
          <pre
            class="text-amber-700"
          >
            hello
            :
          </pre>
           
          <div
            class="flex-auto"
          >
            <pre
              class="whitespace-pre-wrap break-all text-sky-400"
            >
              "world"
            </pre>
          </div>
        </div>
        <div
          class="flex items-center space-x-1"
          style="margin-left: 0rem;"
        >
          <button
            class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700 invisible"
          >
            <svg
              class="fill-white"
            />
          </button>
          <pre
            class="text-amber-700"
          >
            obj
            :
          </pre>
           
          <pre
            class="flex items-center space-x-0.5"
          >
            {
            <button
              class="mx-0.5 rounded-sm bg-slate-400 hover:bg-slate-500 active:bg-slate-600"
            >
              <svg />
            </button>
            }
          </pre>
        </div>
        <div
          class="space-y-1 "
        >
          <div
            class="flex items-center space-x-1"
            style="margin-left: 1rem;"
          >
            <button
              class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
            >
              <svg
                class="fill-white"
              />
            </button>
            <pre
              class="text-amber-700"
            >
              barbes
              :
            </pre>
             
            <div
              class="flex-auto"
            >
              <pre
                class="whitespace-pre-wrap break-all text-sky-400"
              >
                "rochechouart"
              </pre>
            </div>
          </div>
          <div
            class="flex items-center space-x-1"
            style="margin-left: 1rem;"
          >
            <button
              class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
            >
              <svg
                class="fill-white"
              />
            </button>
            <pre
              class="text-amber-700"
            >
              version
              :
            </pre>
             
            <div
              class="flex-auto"
            >
              <pre
                class="whitespace-pre-wrap break-all text-rose-500"
              >
                1
              </pre>
            </div>
          </div>
          <div
            class="flex items-center space-x-1"
            style="margin-left: 1rem;"
          >
            <button
              class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
            >
              <svg
                class="fill-white"
              />
            </button>
            <pre
              class="text-amber-700"
            >
              toto
              :
            </pre>
             
            <div
              class="flex-auto"
            >
              <pre
                class="whitespace-pre-wrap break-all text-purple-500"
              >
                null
              </pre>
            </div>
          </div>
          <div
            class="flex items-center space-x-1"
            style="margin-left: 1rem;"
          >
            <button
              class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700 invisible"
            >
              <svg
                class="fill-white"
              />
            </button>
            <pre
              class="text-amber-700"
            >
              arr
              :
            </pre>
             
            <pre
              class="flex items-center space-x-0.5"
            >
              [
              <button
                class="mx-0.5 rounded-sm bg-slate-400 hover:bg-slate-500 active:bg-slate-600"
              >
                <svg />
              </button>
              ]
            </pre>
          </div>
          <div
            class="space-y-1 hidden"
          >
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                0
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  0.7309955249202127
                </pre>
              </div>
            </div>
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                1
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  0.45152102178420384
                </pre>
              </div>
            </div>
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                2
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  0.3101491368469109
                </pre>
              </div>
            </div>
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                3
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  0.33964078594296154
                </pre>
              </div>
            </div>
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                4
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  0.579201406715314
                </pre>
              </div>
            </div>
          </div>
          <div
            class="flex items-center space-x-1"
            style="margin-left: 1rem;"
          >
            <button
              class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700 invisible"
            >
              <svg
                class="fill-white"
              />
            </button>
            <pre
              class="text-amber-700"
            >
              nested
              :
            </pre>
             
            <pre
              class="flex items-center space-x-0.5"
            >
              {
              <button
                class="mx-0.5 rounded-sm bg-slate-400 hover:bg-slate-500 active:bg-slate-600"
              >
                <svg />
              </button>
              }
            </pre>
          </div>
          <div
            class="space-y-1 hidden"
          >
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                thx
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-rose-500"
                >
                  1138
                </pre>
              </div>
            </div>
            <div
              class="flex items-center space-x-1"
              style="margin-left: 2rem;"
            >
              <button
                class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
              >
                <svg
                  class="fill-white"
                />
              </button>
              <pre
                class="text-amber-700"
              >
                star
                :
              </pre>
               
              <div
                class="flex-auto"
              >
                <pre
                  class="whitespace-pre-wrap break-all text-sky-400"
                >
                  "wars"
                </pre>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center space-x-1"
          style="margin-left: 0rem;"
        >
          <button
            class="rounded-sm bg-red-500 hover:bg-red-600 active:bg-red-700  invisible"
          >
            <svg
              class="fill-white"
            />
          </button>
          <pre
            class="text-amber-700"
          >
            done
            :
          </pre>
           
          <div
            class="flex-auto"
          >
            <pre
              class="whitespace-pre-wrap break-all text-green-500"
            >
              true
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
